--- a/react-boilerplate/.eslintrc.json
+++ b/react-boilerplate/.eslintrc.json
@@ -1,10 +1,10 @@
 {
     "env": {
         "browser": true,
-        "es2021": true
+        "es2021": true,
+        "node": true
     },
     "extends": [
-        "eslint:recommended",
         "plugin:react/recommended",
         "airbnb",
         "prettier"
@@ -20,6 +20,5 @@
         "react",
         "prettier"
     ],
-    "rules": {
-    }
+    "rules": { "linebreak-style": ["error", "windows"] }
 }
